One view, css added

--- a/cargodesk/cargos/templates/display_loads.html
+++ b/cargodesk/cargos/templates/display_loads.html
@@ -1,6 +1,6 @@
 <a href = 'newload/'>Add new load</a>
 <ul>
   {% for load in loads %}
-    <li>{{load.loading_place}} -> {{load.unloading_place}} {{load.weight}} {{info}}</li>
+    <li>{{load.loading_place}} -> {{load.unloading_place}} {{load.weight}} {{load.info}}</li>
   {% endfor %}
 </ul>
