--- a/cargodesk/cargos/templates/one_desk.html
+++ b/cargodesk/cargos/templates/one_desk.html
@@ -1,113 +1,25 @@
 <html>
   <head>
     {% load static %}
-    <link rel='stylesheet' href= "{% static 'cargos/style.css' %}">
+    <link rel='stylesheet' type="text/css" href= "{% static 'css/style.css' %}">
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <style>
 
-    .date{
-      width: 90px;
-    }
-
-    select{
-      height: 26px;
-    }
-
-
-
-    #delbutton{
-      color: black;
-    }
-    #delbutton:hover{
-      color: red;
-    }
-
-    .weight_class{
-      color: : green;
-      width: 35px;
-    }
-    #top-bar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #95918A;
-      height: 40px;
-      text-align: center;
-      padding: 5px;
-      font-size: 22;
-      font-family: 'Orbitron', sans-serif;
-      color: #FFB600;
-      z-index: 999;
-
-    }
-
-    .loads_container {
-      width: 83%;
-      margin-top: 47px;
-      margin-left: 10px;
-    }
-
-    .load_block{
-      display: flex;
-      justify-content: space-between;
-      border: solid 1px;
-      margin: 5px;
-      padding: 3px;
-      border-radius: 2px;
-      border-color: #999492;
-    }
-
-    .load_block:hover{
-      background-color: #fcc780;
-      transform: scale(1.01);
-    }
-
-    #load_maker{
-      position: absolute;
-      height: 100%;
-      right: 0px;
-      top: 40px;
-      width: 250px;
-      background: #E8E6E2;
-      display: flex;
-      justify-content: center;
-
-    }
-
-    .submit_button{
-      width: 100%
-
-    }
-
-    .price{
-      display: inline-block;
-      width: 60px;
-    }
-
-    .weight{
-      display:
-      width: 30px;
-    }
-    .fromwhere{
-      display: flex;
-      justify-content: space-between;
-      width: 370px;
-    }
-
-
-    </style>
   </head>
 
   <body>
-    <div id='top-bar'>
+
+    <div class='top-bar'>
       <span><strong>CargoDesk</strong></span>
+    </div>
+    <div class='navi'>
+      <a href={% url 'history' %} role='button'><button class='link'>History</button></a>
     </div>
 
     <div class='loads_container'>
       {% for load in loads %}
-      <div class='load_block'>
+      <div {% if load.date_close %} style="background-color: #FFAEAE" {% endif %} class='load_block'>
         <div class='fromwhere'>
         <div>{{load.loading_place}}</div>
         <div>{{load.unloading_place}}</div>
