--- a/cargodesk/cargos/templates/history_desk.html
+++ b/cargodesk/cargos/templates/history_desk.html
@@ -30,6 +30,25 @@
         <div>{{load.info}}</div>
       </div>
       {% endfor %}
+
+      <div class="pagination">
+    <span class="step-links">
+        {% if history_loads.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ history_loads.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ history_loads.number }} of {{ history_loads.paginator.num_pages }}.
+        </span>
+
+        {% if history_loads.has_next %}
+            <a href="?page={{ history_loads.next_page_number }}">next</a>
+            <a href="?page={{ history_loads.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
     </div>
 
 
