pagination working correctly now

--- a/cargodesk/cargos/templates/history_desk.html
+++ b/cargodesk/cargos/templates/history_desk.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class='history_container'>
-      {% for load in loads %}
+      {% for load in history_loads %}
       <div class='history_block'>
         <div class='fromwhere'>
         <div>{{load.loading_place}}</div>
