Working editing and static's fixed

--- a/cargodesk/cargodesk/static/css/style.css
+++ b/cargodesk/cargodesk/static/css/style.css
@@ -133,3 +133,9 @@
       color: #FFB600;
 
     }
+
+    @media screen and (max-width: 1400px) {
+      .loads_container {
+        width: 80%;
+      }
+    }
