--- a/cargodesk/cargos/templates/test.html
+++ b/cargodesk/cargos/templates/test.html
@@ -1,7 +1,7 @@
+{% load static %}
 <html>
   <head>
-    {% load static %}
-    <link rel='stylesheet' type="text/css" href= "{% static 'css/style.css' %}">
+    <link rel='stylesheet' href= "{% static 'cargos/css/style.css' %}">
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
     </div>
 
     <div id="load_maker">
-    <form action='{% url 'newload' %}' method="post">
+    <form action="{% url 'editsave' current_pk %}" method="post">
     {% csrf_token %}
       <div><label for='{{creat_load.loading_place.label_tag}}'>Loading place:</label><br>{{ creat_load.loading_place }}</div>
       <div><label for='{{creat_load.unloading_place.label_tag}}'>Unloading place:</label><br>{{ creat_load.unloading_place }}</div>
