--- a/cargodesk/cargos/templates/todo_page.html
+++ b/cargodesk/cargos/templates/todo_page.html
@@ -1,7 +1,7 @@
+{% load static %}
 <html>
   <head>
-    {% load static %}
-    <link rel='stylesheet' type="text/css" href= "{% static 'css/style.css' %}">
+    <link rel='stylesheet' href= "{% static 'cargos/css/style.css' %}">
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
