--- a/cargodesk/cargos/static/cargos/css/style.css
+++ b/cargodesk/cargos/static/cargos/css/style.css
@@ -131,7 +131,53 @@
       border: none;
       font-size: 15px;
       color: #FFB600;
+      margin: -2px;
+    }
 
+    .todos_container {
+        position: fixed;
+        left: 0px;
+        top: 39px;
+        width: 40%;
+        height: 100%;
+        background-color: #e8ecf2;
+      }
+
+
+
+      .todos_maker {
+      width: 100%;
+      height: 230px;
+      background: #dee0e2;
+      border-width:2px;
+      border-style: outset;
+      display: flex;
+      justify-content: center;
+
+    }
+
+    .todo_list {
+      top: 270px;
+      width: 90%;
+      display: flex;
+      }
+
+
+    .todo_block {
+      width: 75%;
+
+    }
+
+    .todo_title {
+      width: 300px;
+    }
+
+    .todo_text {
+      width: 300px;
+    }
+
+    .todo_button {
+      text-align: center;
     }
 
     @media screen and (max-width: 1400px) {
