--- a/cargodesk/cargos/templates/todo_page.html
+++ b/cargodesk/cargos/templates/todo_page.html
@@ -5,26 +5,6 @@
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <style>
-
-      .todos_container{
-        margin-top: 400px;
-        margin-right: 100px;
-      }
-
-      #todo_maker {
-        position: absolute;
-        top-margin: 400px;
-        widith: 50%;
-      }
-
-
-    @media screen and (max-width: 1400px) {
-      .loads_container {
-        width: 80%;
-      }
-    }
-    </style>
   </head>
 
   <body>
@@ -33,25 +13,23 @@
       <span><strong>CargoDesk</strong></span>
     </div>
     <div class='navi'>
+      <a href= {% url 'display' %} role='button'><button class='link'>Main</button></a>
+      <a href={% url 'todo' %} role='button'><button class='link'>MyDesk</button></a>
       <a href={% url 'history' %} role='button'><button class='link'>History</button></a>
-      {% if user.is_authenticated %}
-     <span> @{{ user.get_username }}</span>
-     <span><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></span>
-     {% else %}
-      <span><a href="{% url 'login'%}?next={{request.path}}">Login</a></span>
-     {% endif %}
-     </div>
+    </div>
+
 
 <div class='todos_container'>
-<div id="todo_maker">
-  <form action='{% url 'newtodo' %}' method="post">
-  {% csrf_token %}
-    <div><label for='{{new_post.title}}'>Title</label><br>{{ new_post.title }}</div>
-    <div><label for='{{new_post.text}}'>Text</label><br>{{ new_post.text }}</div>
-    <input class="submit_button btn-success" type="submit" value="Add">
-  </form>
-</div>
+      <div class="todos_maker">
+        <form action='{% url 'newtodo' %}' method="post">
+        {% csrf_token %}
+          <div><label for='{{ new_post.title }}'>What To Do?</label><br>{{ new_post.title }}</div><br>
+          <div><label for='{{ new_post.text.label_tag }}'>What more?</label><br>{{ new_post.text }}</div><br>
+          <div class='todo_button'><input class="btn btn-warning" type="submit" value="Add to list"></div>
+        </form>
+      </div>
 
+<div class='todo_list'>
   {% if todo_list %}
     <ul>
       {% for todos in todo_list %}
@@ -60,6 +38,8 @@
       {% endfor %}
     </ul>
     {% endif %}
+  </div>
+  </div>
 </div>
 </body>
 </html>
