working on templates

--- a/cargodesk/cargos/templates/todo_page.html
+++ b/cargodesk/cargos/templates/todo_page.html
@@ -5,6 +5,14 @@
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <style>
+    .todo_block {
+      width: 75%;
+
+    }
+    </style>
+
   </head>
 
   <body>
@@ -23,20 +31,20 @@
       <div class="todos_maker">
         <form action='{% url 'newtodo' %}' method="post">
         {% csrf_token %}
-          <div><label for='{{ new_post.title }}'>What To Do?</label><br>{{ new_post.title }}</div><br>
+          <div><label for='{{ new_post.title.label_tag }}'>What To Do?</label><br>{{ new_post.title }}</div><br>
           <div><label for='{{ new_post.text.label_tag }}'>What more?</label><br>{{ new_post.text }}</div><br>
           <div class='todo_button'><input class="btn btn-warning" type="submit" value="Add to list"></div>
         </form>
       </div>
 
 <div class='todo_list'>
-  {% if todo_list %}
-    <ul>
-      {% for todos in todo_list %}
-      <li> {{ todos.title}} </li>
-      <li> {{ todos.text }} </li>
+  {% if todos %}
+      {% for todo in todos %}
+      <div class="todo_block">
+      <div><strong>{{todo.title}}</stong></div>
+      <div>{{todo.text}}</div>
+    </div>
       {% endfor %}
-    </ul>
     {% endif %}
   </div>
   </div>
