Working loged_user as post author

--- a/cargodesk/cargos/templates/todo_page.html
+++ b/cargodesk/cargos/templates/todo_page.html
@@ -41,7 +41,7 @@
   {% if todos %}
       {% for todo in todos %}
       <div class="todo_block">
-      <div><strong>{{todo.title}}</stong></div>
+      <div><strong>{{todo.title}}<stong></div>
       <div>{{todo.text}}</div>
     </div>
       {% endfor %}
