--- a/cargodesk/cargos/templates/history_desk.html
+++ b/cargodesk/cargos/templates/history_desk.html
@@ -13,6 +13,8 @@
     </div>
     <div class='navi'>
       <a href= {% url 'display' %} role='button'><button class='link'>Main</button></a>
+      <a href={% url 'todo' %} role='button'><button class='link'>MyDesk</button></a>
+      <a href={% url 'history' %} role='button'><button class='link'>History</button></a>
     </div>
 
     <div class='history_container'>
