--- a/cargodesk/cargos/templates/one_desk.html
+++ b/cargodesk/cargos/templates/one_desk.html
@@ -5,7 +5,7 @@
     <title>CargoDesk</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    
+
   </head>
 
   <body>
@@ -14,14 +14,17 @@
       <span><strong>CargoDesk</strong></span>
     </div>
     <div class='navi'>
-      <a href={% url 'history' %} role='button'><button class='link'>History</button></a>
-      <a href={% url 'todo' %} role='button'><button class='link'>ToDo</button></a>
-      {% if user.is_authenticated %}
-     <span> @{{ user.get_username }}</span>
-     <span><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></span>
-     {% else %}
-      <span><a href="{% url 'login'%}?next={{request.path}}">Login</a></span>
-     {% endif %}
+        <a href= {% url 'display' %} role='button'><button class='link'>Main</button></a>
+        <a href={% url 'todo' %} role='button'><button class='link'>MyDesk</button></a>
+        <a href={% url 'history' %} role='button'><button class='link'>History</button></a>
+      </div>
+      <div class='loged_user'>
+        {% if user.is_authenticated %}
+         <a href="{% url 'logout'%}?next={{request.path}}"><span class="glyphicon glyphicon-log-out"></span></a>
+         <span class="link"> {{ user.get_username }}</span>
+       {% else %}
+        <span><a href="{% url 'login'%}?next={{request.path}}">Login</a></span>
+       {% endif %}
     </div>
 
     <div class='loads_container'>
