--- a/cargodesk/cargos/templates/one_desk.html
+++ b/cargodesk/cargos/templates/one_desk.html
@@ -41,6 +41,7 @@
               {{ load.unload_date_from|date:"d.m -"  }}{{ load.unload_date_to|date:" d.m"}}</div>
         <div>{{load.info}}</div>
         <div class="load_options">
+          <a href="cupboard/{{ load.pk }}" ><span id='cupboard_icon' class="glyphicon glyphicon-copy"></span></a>
           <a href="edit/{{ load.pk }}" ><span id='edit_icon' class="glyphicon glyphicon-pencil"></span></a>
           <a href="copy/{{ load.pk }}" ><span id='copy_icon' class="glyphicon glyphicon-repeat"></span></a>
           <a href="delete/{{ load.pk }}" onclick="return confirm('Pewny?');"><span id='delbutton' class="glyphicon glyphicon-ok"></span></a>
