--- a/cargodesk/cargos/templates/edit_load_page.html
+++ b/cargodesk/cargos/templates/edit_load_page.html
@@ -32,6 +32,7 @@
               {{ load.unload_date_from|date:"d.m -"  }}{{ load.unload_date_to|date:" d.m"}}</div>
         <div>{{load.info}}</div>
         <div class="load_options">
+          <span id='cupboard_icon' class="glyphicon glyphicon-copy"></span>
           <span id='edit_icon' class="glyphicon glyphicon-pencil"></span>
           <span id='copy_icon' class="glyphicon glyphicon-repeat"></span>
           <span id='delbutton' class="glyphicon glyphicon-ok"></span>
