Cancel button on edit/copy page. Not resizeable text area. Todo info blank=true

--- a/cargodesk/cargos/static/cargos/css/style.css
+++ b/cargodesk/cargos/static/cargos/css/style.css
@@ -107,6 +107,13 @@
 
     }
 
+    .cancel_button {
+      position: absolute;
+      right: 35px;
+      top: 580px;
+      width: 180px;
+    }
+
     .price{
       display: inline-block;
       width: 60px;
