--- a/cargodesk/cargos/templates/copy_load.html
+++ b/cargodesk/cargos/templates/copy_load.html
@@ -58,6 +58,7 @@
     <input class="btn btn-info submit_button" type="submit" value="Copy load">
     </form>
   </div>
+  <a href='/'><button class="btn btn-danger cancel_button">Cancel</button></a>
 
 
   </body>
