--- a/cargodesk/cargos/templates/edit_load_page.html
+++ b/cargodesk/cargos/templates/edit_load_page.html
@@ -60,7 +60,7 @@
     <input class="btn btn-warning submit_button" type="submit" value="Edit load">
     </form>
   </div>
-
+  <a href='/'><button class="btn btn-danger cancel_button">Cancel</button></a>
 
   </body>
 
